--- a/styles/style.css
+++ b/styles/style.css
@@ -6,20 +6,91 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+}
+
+div {
+  border: 1px solid rgb(211, 16, 16);
+}
+
+.logo {
+  /*  display: flex; */
+  position: absolute;
+  z-index: 2;
+}
+
+.logo__place_header {
+  margin-top: 30px;
+  margin-left: 64px;
 }
 
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color: #f2f2f2;
+  /*  background-size: cover;
+  background-position: center; */
+  display: flex;
+  position: relative;
   /* выше установили ограничения для секции */
+}
+
+.header__title {
+  display: flex;
+  position: relative;
+  left: 64px;
+  width: 730px;
+  align-items: center;
+  z-index: 2;
+}
+
+.text {
+  font-family: "Helvetica Neue", "Arial", sans-serif;
+  display: flex;
+}
+
+.header__title_text {
+  font-size: 102px;
+  font-style: 600;
+  line-height: 96px;
+}
+
+.header__subtitle {
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+  width: 388px;
+  z-index: 2;
+}
+
+.header__subtitle_text {
+  font-size: 18px;
+  font-style: normal;
+  line-height: 25px;
+  display: inline;
+}
+
+.header__link {
+  text-decoration: none;
+}
+
+.header__main-illustration {
+  height: 608px;
+  width: 765px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
+  position: absolute;
+  right: 0;
+  top: 64px;
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -28,4 +99,5 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  z-index: 1;
 }
