--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
   max-width: 1600px;
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
+  position: relative;
   /* выше для экранов больше 1600px отцентрировали весь контент */
 }
 
@@ -13,7 +14,6 @@ div {
 }
 
 .logo {
-  /*  display: flex; */
   position: absolute;
   z-index: 2;
 }
@@ -51,7 +51,7 @@ div {
 
 .header__title_text {
   font-size: 102px;
-  font-style: 600;
+  font-weight: 600;
   line-height: 96px;
 }
 
@@ -65,13 +65,17 @@ div {
 
 .header__subtitle_text {
   font-size: 18px;
-  font-style: normal;
+  font-weight: normal;
   line-height: 25px;
   display: inline;
 }
 
 .header__link {
   text-decoration: none;
+}
+
+.header__link:hover {
+  text-decoration: underline;
 }
 
 .header__main-illustration {
@@ -81,6 +85,7 @@ div {
   right: 0;
   bottom: 0;
   z-index: 1;
+  opacity: 1;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
