--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+section {
+  border: 1px solid rgb(211, 16, 16);
+}
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -33,6 +37,7 @@ div {
   display: flex;
   position: relative;
   /* выше установили ограничения для секции */
+  margin-bottom: 100px;
 }
 
 .header__title {
@@ -97,7 +102,7 @@ div {
   width: 568px;
   background-color: #2f80ed;
 }
-
+/* 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
@@ -105,4 +110,18 @@ div {
   margin-right: 0;
   margin-top: 80px;
   z-index: 1;
+}
+.description {
+  display: flex;
+  padding: 100px 0;
+
+  /* position: relative; */
+}
+
+.two-columns {
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  min-width: 784px;
 }
