Закончена секция description

--- a/styles/style.css
+++ b/styles/style.css
@@ -102,7 +102,7 @@ div {
   width: 568px;
   background-color: #2f80ed;
 }
-/* 
+/*
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
@@ -124,4 +124,29 @@ div {
   justify-content: space-between;
   width: 80%;
   min-width: 784px;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__brief {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 1.2;
+  color: #2f80ed;
+  width: 175px;
+}
+
+.two-columns__paragraph {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.two-columns__span-accent {
+  font-weight: 600;
+  line-height: 34px;
+  font-size: 24px;
 }
