--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,18 @@ section {
   border: 1px solid rgb(211, 16, 16);
 }
 
+p {
+  border: 1px solid rgb(211, 16, 16);
+}
+
+h4 {
+  border: 1px solid rgb(211, 16, 16);
+}
+
+h5 {
+  border: 1px solid rgb(211, 16, 16);
+}
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -149,4 +161,58 @@ div {
   font-weight: 600;
   line-height: 34px;
   font-size: 24px;
+}
+
+.digits {
+  display: flex;
+  margin: 100px;
+
+  flex-direction: column;
+  align-items: center;
+}
+
+.section__title {
+  margin-bottom: 20px;
+  width: 60%;
+  justify-content: center;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+}
+
+.section__subtitle {
+  width: 60%;
+  justify-content: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.table {
+  width: 1100px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.table__card {
+  width: 250px;
+  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+}
+
+.card__title {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.card__subtitle {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin-top: 20px;
+  margin-bottom: 0;
 }
