--- a/styles/style.css
+++ b/styles/style.css
@@ -299,19 +299,20 @@ div {
   margin: 0 auto 90px;
 }
 
-.table__cell_theme_black {
+.table__cell_theme_dark {
   margin-top: 80px;
   width: 200px;
 }
 
 .kaufman__triangle {
   background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='995' height='1006' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M247.666 717.014 499.294.404l494.789 576.222-746.417 140.388Z' fill='%232F80ED'/%3e%3c/svg%3e");
-  background-size: 995px 1006px;
+  background-size: contain;
   position: absolute;
   top: 0;
   right: -210px;
-  height: 877px;
-  width: 877px;
+  height: 1006px;
+  width: 995px;
+  /* Размеры выше взяты из svg файла изображения треугольника */
 }
 
 .footer {
