--- a/blocks/header/__square-pic/header__square-pic.css
+++ b/blocks/header/__square-pic/header__square-pic.css
@@ -5,4 +5,8 @@
   height: 568px;
   width: 568px;
   background-color: #2f80ed;
+  animation-duration: 20s;
+  animation-name: rotation;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
