--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -1,6 +1,6 @@
-.digits {
+.video {
   display: flex;
-  margin: 100px auto 100px;
   flex-direction: column;
   align-items: center;
+  margin: 100px 0 0px;
 }
