--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-/* section {
+section {
   border: 1px solid rgb(211, 16, 16);
 }
 
@@ -31,8 +31,12 @@ ul {
 
 div {
   border: 1px solid rgb(211, 16, 16);
-} */
+}
 
+
+a {
+  border: 1px solid rgb(211, 16, 16);
+}
 
 
 /* .header {
