--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-section {
+/* section {
   border: 1px solid rgb(211, 16, 16);
 }
 
@@ -36,7 +36,7 @@ div {
 
 a {
   border: 1px solid rgb(211, 16, 16);
-}
+} */
 
 
 /* .header {
