--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,7 +1,6 @@
 .cards {
   display: flex;
-  /*   justify-content: space-between; */
-  min-width: 920px;
-  padding: 0;
-  margin: 0;
+  justify-content: flex-start;
+  width: 920px;
+  flex-wrap: wrap;
 }
