--- a/blocks/cards/__image/cards__image.css
+++ b/blocks/cards/__image/cards__image.css
@@ -1,7 +1,8 @@
 .cards__image {
   width: 160px;
   height: 160px;
-  margin: 60px 40px 43px;
+  margin: 0 auto 43px;
   clip-path: circle(50%);
   object-fit: cover;
+  display: block;
 }
