--- a/blocks/resources/__link/resources__link.css
+++ b/blocks/resources/__link/resources__link.css
@@ -4,7 +4,10 @@
   margin: 0;
   padding: 0;
   display: flex;
-  align-items: center;
-  justify-items: center;
-  align-content: center;
+  transition: opacity 1.5s ease;
+}
+
+.resources__link:hover {
+  text-decoration: underline;
+  opacity: 0.5;
 }
