--- a/pages/index.css
+++ b/pages/index.css
@@ -67,7 +67,7 @@
 @import url("../blocks/resources/__link/resources__link.css");
 @import url("../blocks/resources/__logo/resources__logo.css");
 
-h1,
+/* h1,
 h2,
 h3,
 h4,
@@ -83,3 +83,4 @@ p,
 section {
   border: 1px solid rgb(211, 16, 16);
 }
+ */
