--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,8 +1,7 @@
 .video__iframe {
-  margin: 0 20px 0 0;
+  margin: 0;
   padding: 0;
-}
-
-.video__iframe:last-child {
-  margin-right: 0;
+  width: 515px;
+  height: 316px;
+  border: 0;
 }
